# routes/api.php
@@ -14,6 +14,7 @@ use App\Http\Controllers\Payroll\GeneralPayrollController;
 use App\Http\Controllers\Payroll\PayrollPeriodController;
 use App\Http\Controllers\Payroll\PayrollProcessController;
 use App\Http\Controllers\Payroll\PayrollReportController;
+use App\Http\Controllers\Payroll\PayrollSummaryController;
 use App\Http\Controllers\Reports\ReportsController;
 use App\Http\Controllers\Settings\DeductionController;
 use App\Http\Controllers\Settings\DeductionGroupController;
@@ -86,4 +87,5 @@ Route::middleware('auth.token')->group(function () {
     //Report
     // Route::apiResource('payroll-reports', ReportsController::class)->only(['index']);
     Route::apiResource('payroll-reports', PayrollReportController::class)->only(['index']);
+    Route::apiResource('payroll-summary', PayrollSummaryController::class)->only(['index', 'store']);
 });
